--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -68,12 +68,12 @@ $color-etiqueta-fondo: $color-primario
 $color-etiqueta-texto: $white
 
 //color Links ------------------------------------------
-$color-link: $color-primario
-$color-link-hover: darken($color-primario, 25%)
+$color-link: #12263F
+$color-link-hover: darken(#12263F, 25%)
 
 // Color Botones ---------------------------------------
 $color-btn-fondo: $color-acento-botones
-$color-btn-texto: #fff
+$color-btn-texto: #12263F
 
 // Colores banner --------------------------------------
 $color-banner-fondo: $color-primario
